--- a/nosotros.html
+++ b/nosotros.html
@@ -26,7 +26,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Inicio</a></li>
+								<li><a href="index.html">Inicio</a></li>
 								<li>
 									<a href="#">Dropdown</a>
 									<ul>
@@ -49,7 +49,7 @@
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li><a href="nosotros.html">Nosotros</a></li>
+								<li class="current"><a href="nosotros.html">Nosotros</a></li>
 								<li><a href="registro_usuario.html">Ingresa</a></li>
 							</ul>
 						</nav>
@@ -59,13 +59,25 @@
 
 
 
-			<!-- Banner -->
-				<section id="banner">
+			<article>
 					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
-						<a href="#" class="button">Learn More</a>
+						<h2>Acerca de Nosotros</h2>
 					</header>
-				</section>
+					<center>
+						<span class="image featured"><img src="images/conect.png" alt="" style="width:30%;height:30%;" /></span>
+				  </center>
+					<p>Como grupo estamos interesados en desarrollar un interés mayor por el
+					reciclaje, ofreciendo pequeños incentivos.</p>
+
+					<h3>Las Cifras</h3>
+					<p>Según estudios realizados por la ong bla bla... datos que hemos dicho en todas las
+					presentaciones.... chamullo</p>
+
+
+				</article>
+
+
+
 
 			<!-- Highlights -->
 				<section class="wrapper style1">
