--- a/registro_usuario.html
+++ b/registro_usuario.html
@@ -49,6 +49,7 @@
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
 								<li><a href="right-sidebar.html">Right Sidebar</a></li>
 								<li><a href="two-sidebar.html">Two Sidebar</a></li>
+								<li><a href="nosotros.html">Nosotros</a></li>
 								<li class="current"><a href="registro_usuario.html">Ingresa</a></li>
 							</ul>
 						</nav>
@@ -68,6 +69,9 @@
 					Rut: <input type="text" name="rut" placeholder="12345678-9" maxlength="10" size="10"><br>
 					E-mail: <input type="text" name="email" placeholder="ejemplo@mail.com"><br>
 					Contraseña: <input type="password" name="pass" placeholder="Ingresa tu contraseña"><br>
+					Sexo: <input type="radio" name="gender" value="masculino"> Masculino
+								<input type="radio" name="gender" value="femenino"> Femenino
+								<input type="radio" name="gender" value="otro"> Otro<br><br>
 					<input type="submit">
 				</form>
 
