--- a/nosotros.html
+++ b/nosotros.html
@@ -59,19 +59,42 @@
 
 
 
-			<article>
+			<article style="width:80%; margin-left:50px; margin-right:25px;">
 					<header>
-						<h2>Acerca de Nosotros</h2>
+						<h2>Quiénes Somos</h2>
 					</header>
 					<center>
 						<span class="image featured"><img src="images/conect.png" alt="" style="width:30%;height:30%;" /></span>
 				  </center>
-					<p>Como grupo estamos interesados en desarrollar un interés mayor por el
-					reciclaje, ofreciendo pequeños incentivos.</p>
+					<p align=justify>Somos un grupo de estudiantes que fundamos una iniciativa Chilena, que surgió el año 2017
+						con el propósito de impulsar el reciclaje de plásticos, aluminio y cartón creando la conexión
+						con los usuarios potenciales; por medio de una página web que posee un sistema de puntos ponderado,
+						los cuales son canjeables por productos de distintos rubros asociados.</p>
+					<p>Contribuyendo así con el cuidado del medio ambiente a través del reciclaje de residuos.
+						Contamos con la casa matriz en la ciudad de Valparaíso situada específicamente en la casa central de la PUCV.</p>
+					<p>Somos una empresa Socialmente Responsable, que basa sus operaciones en tres pilares fundamentales: Económico, Social y Ambiental.
+					</p>
 
-					<h3>Las Cifras</h3>
-					<p>Según estudios realizados por la ong bla bla... datos que hemos dicho en todas las
-					presentaciones.... chamullo</p>
+					<h3>Nuestra Misión</h3>
+					<p>Entregar un servicio de reciclaje de excelencia diseñado a la medida de cada uno de nuestros clientes,
+					 cuidando el medio ambiente mediante la disposición sustentable de sus residuos.</p>
+
+					 <h3>Nuestros Valores</h3>
+					 <ul type=disk>
+						 <li> Trabajo en equipo.
+						 <li>	Creatividad e innovación.
+						 <li>	Comunicación.
+						 <li> Calidad de servicio.
+						 <li> Cuidado del medio ambiente.
+					 </ul>
+
+					 <h3>Nuestro Equipo</h3>
+					 <p>Macarena Cortes M.<br>
+						 macarenacortes@conectiverde.com</p>
+						 <p>Iván Díaz F.<br>
+						 ivandiaz@conectiverde.com</p>
+						 <p>Luis León B.<br>
+						 luisleon@conectiverde.com</p>
 
 
 				</article>
