--- a/registro_usuario.html
+++ b/registro_usuario.html
@@ -56,13 +56,14 @@
 
 				</div>
 <!-- aqui registro e ingreso de usuario -->
+		<center>
 			<h2>Ingresa a tu cuenta</h2>
 				<form action="asdasfasf.php" method="post">
 					Rut: <input type="text" name="rut" placeholder="12345678-9" maxlength="10" size="10"><br>
 					Contraseña: <input type="password" name="pass" placeholder="Ingresa tu contraseña"><br>
 					<input type="submit">
 				</form>
-
+				<br><br>
 			<h2>Crear cuenta nueva</h2>
 				<form action="resgistro_user.php" method="post" >
 					Nombre: <input type="text" name="nombre" placeholder="Juanito Pérez" maxlength="25" size="25"><br>
@@ -71,10 +72,11 @@
 					Contraseña: <input type="password" name="pass" placeholder="Ingresa tu contraseña"><br>
 					Sexo: <input type="radio" name="gender" value="masculino"> Masculino
 								<input type="radio" name="gender" value="femenino"> Femenino
-								<input type="radio" name="gender" value="otro"> Otro<br><br>
+								<input type="radio" name="gender" value="otro"> Otro<br>
+								<br>
 					<input type="submit">
 				</form>
-
+			</center>
 			<!-- Main -->
 				<section class="wrapper style1">
 					<div class="container">
